media/css/base.scss
@import "globals.scss";
@import "base_mobile.scss";


.container {
    margin: 0 auto;
    width: 960px;
}

html {
    border: 0;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Source Sans Pro', sans-serif;
}

body, .content {
    background-color: $white;
}

p, h1, h2, h3, h4 {
    color: $black;
}

a {
    color: $dark-gray;
    font-weight: bold;
    text-decoration: none;
    &:hover {
        color: $teal;
    }
}

ul {
    list-style-type: none;
}

hr {
    color: $white;
}

a, tr, li, div, span, h1, h2, h3 {
    @include transition(background .15s, color .25s);
}

input[type="text"], input[type="search"], select {
    background: $white;
    border-radius: 2px;
    padding-left: 3px;
}
input[type="text"], input[type="search"] {
    color: $black;
    &.blur {
        color: $light-gray;
    }
}

.messages {
    @include default-box-shadow();
    background: $light-gray;
    border-radius: 0 0 2px 2px;
    padding: 13px;
    text-align: center;
    li {
        color: $black;
        &.error {
            color: $red;
        }
    }
}

.delete-sprite:after {
    background-image: url(../img/delete.png);
    background-position: -40px 0;
    display: block;
    height: 16px;
    position: relative;
    width: 16px;
}

a.btn {
    background: $blue;
    border-radius: 2px;
    bottom: 0;
    color: $white;
    font-weight: normal;
    margin-right: 10px;
    padding: 5px 10px;
    position: relative;
    text-decoration: none;
    right: 0;
    transition: .1s .1s;
    &:hover {
        @include box-shadow(2px 2px 2px $dark-gray);
        background: lighten($blue, 5%);
        bottom: 2px;
        color: $white;
        cursor: pointer;
        right: 2px;
    }
    &:active {
        @include box-shadow(none);
        background: darken($blue, 10%);
        bottom: 0;
        right: 0;
        transition: .03s 0s;
    }
    &.red {
        background: $red;
        &:hover {
            background: lighten($red, 5%);
        }
        &:active {
            background: darken($red, 10%);
        }
    }
    &.cancel {
        background: $dark-gray;
        &:hover {
            background: lighten($dark-gray, 5%);
        }
        &:active {
            background: darken($dark-gray, 10%);
        }
    }
}

.center {
    text-align: center;
}

.hidden, a.btn.hidden.c {
    display: none;
}

#header {
    background-color: $dark-blue;
    height: 30px;
    padding-top: 5px;
}
.icon {
    width: 25px;
    height: 25px;
    z-index: 1;
    display: block;
    position: relative;
    float: left;
    margin-left: 5px;
}
#left-header {
    width: auto;
    position: relative;
    float: left;
}
#logout-btn {
    background-image: url(../img/logout.png);
    &:hover {
        background-image: url(../img/logout-hover.png);
    }
}
#home-btn {
    background-image: url(../img/home.png);
    &:hover {
        background-image: url(../img/home-hover.png);
    }
}
#settings-btn {
    background-image: url(../img/settings.png);
    &:hover {
        background-image: url(../img/settings-hover.png);
    }
}
#right-header {
    width: auto;
    position: relative;
    float: right;
}
.settings-btn {
    display: none;
}
.settings-info {
    display: inline;
}
.user-info {
    display: block;
    height: 25px;
    position: relative;
    color: $white;
    float: left;
    margin-left: 5px;
    &.name:hover {
        color: $teal;
    }
    .level {
        color:$white;
    }
    .level:hover {
        color: $teal;
    }
}
#ctnr-change {
    position: relative;
    float: left;
    margin-left: 5px;
}
#bug-report {
    margin-left: 5px;
    color: $white;
    &:hover {
        color: $teal;
    }
}

.settings-menu {
    width: 935px;
    margin: 0 auto;
    padding: 13px;
    position: relative;
    background-color: $dark-gray;
    display: none;
    color: $white;
    z-index: 2;
}

#sidebar {
    .expand {
        opacity: 0;
    }
    float: left;
    height: 100%;
    margin-right: 26px;
    width: 145px;
    .nav-item:first-child .nav-link {
        border-radius: 2px 2px 0 0;
    }
    .nav-item:last-child .nav-link {
        border-radius: 0 0 2px 2px;
    }
    .nav-link {
        background: $dark-gray;
        border: 1px solid $dark-gray;
        border-right:2px solid $dark-gray;
        border-bottom:1px solid $teal;
        border-top:1px solid $teal;
        color: $white;
        display: block;
        padding: 13px;
        &.child {
            transition: margin-left .25s;
            background: $dark-gray;
            color: $white;
            border: none;
            margin-left: 12px;
            border-left:2px solid $teal;
            border-bottom:1px solid $black;
            border-top:1px solid $black;
            border-right:2px solid $black;
            &:hover {
                margin-left: 3px;
            }
            &.selected {
                background: $light-gray;
                border-bottom:1px solid $dark-gray;
                border-right: none;
                border-right: none;
                color: $black;
                &:hover {
                    margin-left: 12px;
                }
            }
        }
        &:hover {
            color: $teal;
            background: $dark-gray;
            text-decoration: none;
        }
        &.selected {
            background: $light-gray;
            border: none;
            border-left:2px solid $teal;
            border-right: none;
            border-bottom:2px solid $teal;
            border-top:1px solid $teal;
            color: $dark-gray;
            &:hover {
                color: $teal;
            }
        }
    }
}

.main {
    clear: both;
    font-size: 13px;
    height: auto;
    padding-top: 13px;
    position: relative;
    .content {
        clear: left;
        display: inline-block;
        margin-top: 13px;
        overflow: visible;
        // Container - sidebar width - sidebar gutter - gutter.
        // TODO: gridding.
        width: 771px;
    }
}

#chevronfooter {
    display: none;
    position: fixed;
    left: 43%;
    bottom: 0%;
    width: 48px;
    height: 48px;
    text-align: center;
    #chevron {
        height: 100%;
        width: 100%;
        #chevronimg {
            width: 48px;
            height: 48px;
            background-color: transparent;
            position:fixed;
            opacity: .7;
        }
    }
}

#sidebar_toggle{
    display: none;
}

.page-header {
    #title {
        display: inline;
    }
    #action-bar {
        float: right;
        margin-top: 5px;
    }
}

/* Pagination */
.pagination {
    height: 36px;
    margin: 18px 0;
    ul {
      display: inline-block;
      *display: inline;
      /* IE7 inline-block hack */
      *zoom: 1;
      margin-left: 0;
      margin-bottom: 0;
      border-radius: 2px;
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
    }
    li {
      display: inline;
    }
    a {
      float: left;
      padding: 0 14px;
      line-height: 34px;
      text-decoration: none;
      border: 1px solid #ddd;
      border-left-width: 0;
      &:hover {
        background-color: #f5f5f5;
      }
    }
    .active a {
      background-color: #f5f5f5;
      color: #999999;
      cursor: default;
    }
    .disabled {
      span {
        color: #999999;
        background-color: transparent;
        cursor: default;
      }
      a {
        color: #999999;
        background-color: transparent;
        cursor: default;
        &:hover {
          color: #999999;
          background-color: transparent;
          cursor: default;
        }
      }
    }
    li {
      &:first-child a {
        border-left-width: 1px;
        border-radius: 2px 0 0 2px;
      }
      &:last-child a {
        border-radius: 0 2px 2px 0;
      }
    }
}
.pagination-centered {
    text-align: center;
}
.pagination-right {
    text-align: right;
}

#search-help {
    display: block;
    margin: 6px 0 13px;
}
#search-meta {
    margin-bottom: 26px;
}

#footer {
    background-color: $dark-blue;
    color: $white;
    font-size: 13px;
    padding-top: 13px;
    text-align: center;
    a {
        color: $white;
        &:hover {
            color: $teal;
        }
    }
}

/* Clearfix */
.c:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}
.c {
    display: inline-block;
}
html[xmlns] .c {
    display: block;
}
* html .c {
    height: 1%;
}

